# forge

./: .gitignore  .luarc.json  Cargo.toml  Justfile  LICENSE  README.md  dprint.json  types.lua
examples/bash_example/: .gitignore  FORGE  FORGE_ROOT
examples/bash_example/scripts/: generate.sh
examples/c_example/: FORGE  FORGE_ROOT
examples/c_example/lib/: math_utils.c
examples/c_example/src/: main.c
examples/cmake_example/: CMakeLists.txt  FORGE  FORGE_ROOT
examples/cmake_example/include/: greetings.h
examples/cmake_example/src/: greetings.c  main.c
examples/complex_rust_example/: FORGE  build.rs
examples/complex_rust_example/lib/math_native/: math_native.c  (+1 more)
examples/complex_rust_example/src/: main.rs
examples/cpp_example/: FORGE  FORGE_ROOT
examples/cpp_example/lib/: FORGE  string_utils.cpp  string_utils.hpp
examples/cpp_example/src/: main.cpp
examples/make_example/: FORGE  FORGE_ROOT  Makefile
examples/make_example/include/: math_utils.h
examples/make_example/src/: main.c
examples/minimal_rust_example/: FORGE
examples/minimal_rust_example/src/: main.rs
examples/zig_build_example/: FORGE  FORGE_ROOT  build.zig
examples/zig_build_example/src/: lib.zig  main.zig
examples/zig_example/: FORGE  FORGE_ROOT
examples/zig_example/lib/: math_utils.zig
examples/zig_example/src/: main.zig
examples/zig_raylib_example/: FORGE  FORGE_ROOT  raylib-lib-paths.patch
examples/zig_raylib_example/src/: main.zig
examples/zig_raylib_example/tools/: zig
forge-macros/: Cargo.toml
forge-macros/src/: lib.rs
forge-macros/tests/: integration_tests.rs
prelude/: build_common.lua  compiler_common.lua  target_common.lua
prelude/bash/: bash.lua
prelude/c/: c.lua  c_common.lua  c_compiler.lua
prelude/cpp/: cpp.lua  cpp_common.lua  cpp_compiler.lua
prelude/zig/: zig.lua  zig_common.lua  zig_compiler.lua
src/: cache.rs  config.rs  error.rs  forge_root_config.rs  main.rs  project.rs
src/lua_api/: exec.rs  fs.rs  hash.rs  http.rs  init.rs  log.rs  mod.rs  parse.rs  path.rs  platform.rs  project.rs  semver.rs  string.rs  table.rs  time.rs
(+1 files in other folders)
