[package]
name = "forge-macros"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
mlua = { version = "0.11", features = ["lua54", "userdata-wrappers", "vendored", "send"] }
